[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/logos/bhp_logo.png" type="Texture" id=1]
[ext_resource path="res://game/components/overlay/overlay.gd" type="Script" id=2]
[ext_resource path="res://game/assets/ui/icons/FullscreenIcon.png" type="Texture" id=3]
[ext_resource path="res://game/assets/ui/icons/HomeIcon.png" type="Texture" id=4]
[ext_resource path="res://game/assets/ui/icons/Selector.png" type="Texture" id=5]
[ext_resource path="res://game/assets/sounds/button.ogg" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.623529 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.0705882 )
shadow_size = 10

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Overlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Logo" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -41.0
margin_right = 109.0
margin_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HomeButtons" type="Control" parent="."]
unique_name_in_owner = true
margin_top = 50.0
margin_right = 40.0
margin_bottom = 90.0
mouse_filter = 2

[node name="HomeButton" type="Button" parent="HomeButtons"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.486275 )
margin_left = 6.0
margin_top = 6.0
margin_right = 44.0
margin_bottom = 44.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 4 )
expand_icon = true

[node name="SelectorButton" type="Button" parent="HomeButtons"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.486275 )
margin_left = 6.0
margin_top = 56.0
margin_right = 44.0
margin_bottom = 94.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 5 )
expand_icon = true

[node name="FullScreenButton" type="Button" parent="HomeButtons"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.486275 )
margin_left = 6.0
margin_top = 106.0
margin_right = 44.0
margin_bottom = 144.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
toggle_mode = true
icon = ExtResource( 3 )
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 6 )

[connection signal="pressed" from="HomeButtons/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="HomeButtons/SelectorButton" to="." method="_on_SelectorButton_pressed"]
[connection signal="toggled" from="HomeButtons/FullScreenButton" to="." method="_on_FullScreenButton_toggled"]
